<resources>
    <string name="app_name">My Calc</string>
    <string name="no_transaction_yet">No Transaction Yet!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91">+91</string>
    <string name="login">Login</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_valid_verification_code">Please enter valid Verification code</string>
    <string name="sucess">Success</string>
    <string name="failed">failed</string>
    <string name="code_sent">Verification Code Sent</string>
    <string name="verification_code">Verification code</string>
    <string name="remove">Remove</string>
    <string name="_remove">- Remove</string>
    <string name="add">Add</string>
    <string name="_add">+ Add</string>
    <string name="total_outcome">Total Outcome</string>
    <string name="total_income">Total Income</string>
    <string name="remaining">Remaining</string>
    <string name="add_filter">Add Filter</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="last_7_days">Last 7 days</string>
</resources>
